--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.2.3",
     "prettier": "^2.3.1",
+    "sass": "1.42.1",
     "ts-jest": "27.0.5",
     "typescript": "~4.3.5"
   }
